--- a/index.html
+++ b/index.html
@@ -15,8 +15,18 @@
 </head>
 
 <body>
-    
+    <div id="bobs-list">
 
+    </div>
+    <div id="christmas-list">
+
+    </div>
+    <div id="pet-list">
+
+    </div>
+    <div id="tv-show-list">
+        
+    </div>
     <script type="module" src="./app.js"></script>
 </body>
 
