created  renderPets func and to app.js

--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
 </head>
 
 <body>
-    <div id="bobs-list">
+    <div class="main" id="bobs-list">
 
     </div>
-    <div id="christmas-list">
+    <div class="main" id="christmas-list">
 
     </div>
-    <div id="pet-list">
+    <div class="main" id="pet-list">
 
     </div>
-    <div id="tv-show-list">
+    <div class="main" id="tv-show-list">
         
     </div>
     <script type="module" src="./app.js"></script>
