created xmas -data.js -render.js and added to app.js

--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
 
 <body>
     <div class="main" id="bobs-list">
-
+        <h3>Bob's Burgers Characters:</h3>
     </div>
     <div class="main" id="christmas-list">
-
+        <h3>A list of Christmas Things:</h3>
     </div>
     <div class="main" id="pet-list">
-
+        <h3>Pets Existing in Ari's Precious Space:</h3>
     </div>
     <div class="main" id="tv-show-list">
-        
+        <h3>Ari's Favorite TV Shows:</h3>
     </div>
     <script type="module" src="./app.js"></script>
 </body>
