--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
     </div>
     <div class="main" id="christmas-list">
         <h3>A list of Christmas Things:</h3>
+        <div class="xmas-img">
+            <img src="./assets/xmas-tree.png" alt="christmas tree">
+            <img src="./assets/xmas-light.jpg" alt="white christmas lights">
+            <img src="./assets/xmas-decor.jpg" alt="christmas ornaments">
+            <img src="./assets/xmas-story.png" alt="santa on his sleigh">
+            <img src="./assets/xmas-socks.jpg" alt="christmas socks in front of a fire">
+        </div>
     </div>
     <div class="main" id="pet-list">
         <h3>Pets Existing in Ari's Precious Space:</h3>
